RESOLVED FIXED 169581
REGRESSION (r213877): WebKit2.CookieManager fails
https://bugs.webkit.org/show_bug.cgi?id=169581
Summary REGRESSION (r213877): WebKit2.CookieManager fails
Brady Eidson
Reported 2017-03-13 19:52:57 PDT
REGRESSION (r213877): WebKit2.CookieManager fails Caused by https://trac.webkit.org/changeset/213877
Attachments
Patch (4.98 KB, patch)
2017-03-14 10:14 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-03-13 20:01:35 PDT
I'm trying to commit a change to skip the test but our webkit.org servers are in flux right now. Will try again later tonight.
Brady Eidson
Comment 2 2017-03-14 08:54:53 PDT
Brady Eidson
Comment 3 2017-03-14 10:14:45 PDT
WebKit Commit Bot
Comment 4 2017-03-14 10:58:13 PDT
Comment on attachment 304390 [details] Patch Clearing flags on attachment: 304390 Committed r213916: <http://trac.webkit.org/changeset/213916>
WebKit Commit Bot
Comment 5 2017-03-14 10:58:17 PDT
All reviewed patches have been landed. Closing bug.
roger.hu
Comment 6 2017-05-24 12:38:29 PDT
Just wondering -- do you have any sense of when these patches will make themselves into iOS updates? Would clients need to have WebKit updated too or is it primarily on the iOS SDK side?
roger.hu
Comment 7 2017-05-24 12:40:05 PDT
Sorry I meant to ask this question here: https://bugs.webkit.org/show_bug.cgi?id=140191
Note You need to log in before you can comment on or make changes to this bug.