REGRESSION (r213877): WebKit2.CookieManager fails. https://bugs.webkit.org/show_bug.cgi?id=169581

Reviewed by Tim Horton.

Source/WebKit2:

* UIProcess/WebCookieManagerProxy.cpp:
(WebKit::WebCookieManagerProxy::processPoolDestroyed): Invalidate the new sets of callbacks.
(WebKit::WebCookieManagerProxy::processDidClose): Ditto.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Reenable the test.


Canonical link: https://commits.webkit.org/186602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213916 268f45cc-cd09-0410-ab3c-d52691b4dbfc